fix: 修改swagger 內容
