# app/models/account/User_Model.go
@@ -1,14 +1,15 @@
 package account
 
+import "time"
+
 type Userlogin struct {
-	Email    string
-	Password string
+	Email    string `json:"email" example:"user@example.com"`
+	Password string `json:"password" example:"yourpassword"`
 }
 
 type Register struct {
-	Email        string
-	Password     string
-	Name         string
-	Registertime string
-	Bethday      string
+	Email    string    `json:"email" example:"user@example.com"`
+	Password string    `json:"password" example:"yourpassword"`
+	Name     string    `json:"name" example:"kent"`
+	Bethday  time.Time `json:"Bethday" time_format:"2006-01-02T15:04:05-00:00" example:"2025-03-23T15:04:05-00:00"`
 }
